[package]
name = "db_utils"
version = "0.1.1"
authors = ["yn <642410979@qq.com>"]
edition = "2021"
description = "有关mysql的集成简化工具"
license = "GPL-3.0"
readme = "README.md"

[lib]
name = "db_utils_lib"
path = "db_tool/lib.rs"
crate-type = ["staticlib", "cdylib"]

[workspace]
members = [
    "system_config",
    "macro_builder",
    "system_db",
]

[dependencies]
macro_builder = { workspace = true }
system_config = { workspace = true}
system_db = { workspace = true}

[workspace.dependencies]
macro_builder = { path = "./macro_builder" }
system_config = { path = "./system_config" }
system_db = { path = "./system_db" }