[package]
name = "db_utils"
version = "0.1.1"
authors = ["yn <642410979@qq.com>"]
edition = "2021"
description = "有关mysql的集成简化工具"
license = "GPL-3.0"
repository = "https://github.com/cnYannuo/db_utils"
readme = "README.md"

[lib]
path = "db_tool/lib.rs"

[dependencies.macro_builder]
path = "./macro_builder"
version = "0.1.1"

[dependencies.system_config]
path = "./system_config"
version = "0.1.1"

[dependencies.system_db]
path = "./system_db"
version = "0.1.1"
