[package]
name = "db_utils"
version = "0.1.3"
authors = ["yn <642410979@qq.com>"]
edition = "2021"
description = "有关mysql的集成简化工具"
license = "GPL-3.0"
repository = "https://github.com/cnYannuo/db_utils"
readme = "README.md"

[lib]
path = "db_tool/lib.rs"

[workspace]
members = [
    "db_utils_config",
    "macro_builder",
    "db_utils_dao",
]

[dependencies.macro_builder]
path = "./macro_builder"
version = "0.1.3"

[dependencies.db_utils_config]
path = "./db_utils_config"
version = "0.1.1"

[dependencies.db_utils_dao]
path = "./db_utils_dao"
version = "0.1.1"
